fix: align restart button correctly

--- a/app/components/build-banner/styles.scss
+++ b/app/components/build-banner/styles.scss
@@ -35,6 +35,10 @@
       text-align: center;
     }
 
+    .pure-u-1-3:last-child {
+      text-align: right;
+    }
+
     h1 {
       display: inline-block;
       margin: 0;
